--- a/frontend/studybuddy-frontend/public/index.html
+++ b/frontend/studybuddy-frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6366f1" />
     <meta
       name="description"
       content="StudyBuddy — Your intelligent task management companion"
