--- a/frontend/studybuddy-frontend/public/index.html
+++ b/frontend/studybuddy-frontend/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Favicon: use ICO first for widest compatibility, SVG for modern browsers; add cache-busting -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg?v=2" />
+    <!-- Favicon: prefer SVG (emerald), keep ICO as fallback; bump version for cache-busting -->
+    <link rel="icon" type="image/svg+xml" sizes="any" href="%PUBLIC_URL%/favicon.svg?v=3" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#6366f1" />
+    <meta name="theme-color" content="#10b981" />
     <meta
       name="description"
       content="StudyBuddy — Your intelligent task management companion"
